--- a/.github/workflows/update_pkg_beta_version.yml
+++ b/.github/workflows/update_pkg_beta_version.yml
@@ -7,16 +7,12 @@ on:
       - main
 
 permissions:
-  contents: read
+  contents: write
+  packages: write
 
 jobs:
   update_pkg_beta_version:
     name: Update package - Stable Version
-    uses: ./update_pkg.yml
+    uses: ./.github/workflows/update_pkg.yml
     with:
-      version-command: |
-        if [ "${{ needs.update_pkg_beta_version.outputs.is_beta }}" == "true" ]; then
-          npm version prerelease --preid=beta --no-git-tag-version
-        else
-          npm version prepatch --preid=beta --no-git-tag-version
-        fi
+      command-type: 'beta'
