--- a/.github/workflows/publish_pkg.yml
+++ b/.github/workflows/publish_pkg.yml
@@ -1,6 +1,9 @@
 name: Publish to NPM
 
 on:
+  workflow_call:
+    branches-ignore:
+      - main
   pull_request:
     types: [closed]
     branches:
@@ -9,7 +12,7 @@ on:
 jobs:
   create_tag_and_release:
     runs-on: ubuntu-latest
-    if: ${{ github.event_name == 'pull_request' && github.event.pull_request.merged == true }}
+    if: ${{ github.event_name == 'pull_request' && github.event.pull_request.merged == true || github.event_name == 'workflow_call' }}
 
     steps:
     - name: Checkout code
@@ -22,7 +25,7 @@ jobs:
 
     - name: Configure Git credentials
       run: |
-        git config --global user.email "alexalves2501@hotmail.com"
+        git config --global user.email "github-actions[bot]@users.noreply.github.com"
         git config --global user.name "github-actions[bot]"
 
     - name: Extract package version
