--- a/.github/workflows/publish_pkg.yml
+++ b/.github/workflows/publish_pkg.yml
@@ -9,6 +9,7 @@ on:
 
 jobs:
   create_tag_and_release:
+    if: ${{ github.event_name != 'pull_request' || github.event.pull_request.merged == true }}
     runs-on: ubuntu-latest
 
     steps:
@@ -52,6 +53,7 @@ jobs:
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         tags: v${{ steps.version.outputs.version }}
+        branch: ${{ github.ref }}
 
     - name: Create release
       if: env.exists == 'false'
@@ -64,8 +66,12 @@ jobs:
         release_name: Release ${{ steps.version.outputs.version }}
         body: |
           Release ${{ steps.version.outputs.version }}
-        draft: false
-        prerelease: false
+        prerelease: |
+          if [[ "${{ steps.version.outputs.version }}" == *"beta"* ]]; then
+            true
+          else
+            false
+          fi
 
   publish:
     runs-on: ubuntu-latest
