--- a/.github/workflows/update_pkg_version.yml
+++ b/.github/workflows/update_pkg_version.yml
@@ -35,4 +35,5 @@ jobs:
   publish_pkg:
     name: Publish package
     needs: update_pkg_version
+    # if: ${{ github.event.inputs.publish-pkg == true }}
     uses: ./.github/workflows/publish_pkg.yml
