--- a/.github/workflows/publish_pkg.yml
+++ b/.github/workflows/publish_pkg.yml
@@ -104,6 +104,6 @@ jobs:
       run: echo "//registry.npmjs.org/:_authToken=${{ secrets.NPM_AUTH_TOKEN }}" > ~/.npmrc
 
     - name: Publish to NPM
-      run: npm publish --access public
+      run: npm publish
       env:
         NODE_AUTH_TOKEN: ${{secrets.NPM_AUTH_TOKEN}}
