--- a/.github/workflows/publish_pkg.yml
+++ b/.github/workflows/publish_pkg.yml
@@ -86,17 +86,19 @@ jobs:
     - name: Checkout Repository
       uses: actions/checkout@v4
       with:
-        persist-credentials: false
         fetch-depth: 0
 
     - name: Set up Node.js
       uses: actions/setup-node@v4
       with:
-        node-version: "20"
-        registry-url: 'https://registry.npmjs.org'
+        node-version: "lts/*"
+        registry-url: "https://registry.npmjs.org"
 
-    - name: Install Dependencies
-      run: npm install
+    - name: Install latest NPM
+      run: npm install -g npm@latest
+
+    - name: Install dependencies
+      run: npm ci
 
     - name: Build Package
       run: npm run build
@@ -105,6 +107,8 @@ jobs:
       run: echo "//registry.npmjs.org/:_authToken=${{ secrets.NPM_AUTH_TOKEN }}" > ~/.npmrc
 
     - name: Publish to NPM
-      run: npm publish --access public
+      run: npm publish
       env:
         NODE_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
+        NPM_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
