--- a/.github/workflows/publish_pkg.yml
+++ b/.github/workflows/publish_pkg.yml
@@ -2,6 +2,9 @@ name: Publish to NPM
 
 on:
   workflow_call:
+  push:
+    branches:
+      - '**'
   pull_request:
     types: [closed]
     branches:
@@ -107,6 +110,6 @@ jobs:
       run: npm run build
 
     - name: Publish to NPM
-      run: npm publish --provenance --access public
+      run: npm publish
       env:
         NODE_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
