--- a/.github/workflows/update_pkg_stable_version.yml
+++ b/.github/workflows/update_pkg_stable_version.yml
@@ -2,7 +2,7 @@ name: Update package - stable version
 
 on:
   pull_request:
-    types: [opened, syncronized, reopened]
+    types: [opened, synchronize, reopened]
     branches:
       - main
 
