--- a/.github/workflows/update_pkg_version.yml
+++ b/.github/workflows/update_pkg_version.yml
@@ -31,7 +31,7 @@ jobs:
     environment: manual-deploy
     runs-on: ubuntu-latest
     steps:
-      - name: approved
+      - name: Approved
         run: echo "Approve for manual-deploy"
 
   update_pkg_version:
