--- a/.github/workflows/update_pkg_beta_version.yml
+++ b/.github/workflows/update_pkg_beta_version.yml
@@ -3,8 +3,12 @@ name: Update package - beta version
 on:
   pull_request:
     types: [opened, reopened]
-    branches-ignore:
-      - main
+    branches:
+      - release/**
+      - major/**
+      - feature/**
+      - fix/**
+      - hotfix/**
 
 permissions:
   contents: write
