--- a/.github/workflows/update_pkg_downgrade.yml
+++ b/.github/workflows/update_pkg_downgrade.yml
@@ -4,7 +4,12 @@ on:
   pull_request:
     types: [closed]
     branches:
-      - '**'
+      - release/**
+      - major/**
+      - feature/**
+      - fix/**
+      - hotfix/**
+      - main
 
 permissions:
   contents: write
