--- a/.github/workflows/update_pkg_stable_version.yml
+++ b/.github/workflows/update_pkg_stable_version.yml
@@ -14,6 +14,7 @@ jobs:
   determine_version_type:
     name: Determine version type
     runs-on: ubuntu-latest
+    if: startsWith(github.head_ref, 'feature/') || startsWith(github.head_ref, 'fix/') || startsWith(github.head_ref, 'release/')
 
     outputs:
       version_type: ${{ steps.determine_version.outputs.version_type }}
