include template for actions

--- a/.github/workflows/update_pkg.yml
+++ b/.github/workflows/update_pkg.yml
@@ -25,9 +25,7 @@ jobs:
         node-version: "20"
 
     - name: Configure Git credentials
-      run: |
-        git config --global user.email "github-actions[bot]@users.noreply.github.com"
-        git config --global user.name "github-actions[bot]"
+      uses: ./.github/actions/configure-git-credentials.yml
 
     - name: Extract package version
       id: extract_version
